--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section>
         <div class="card1">
-            <div class="data1">
+            <div class="data1" id="data1">
                 <h4>Who can see your content?</h4>
 
                 <div class="form">
@@ -32,12 +32,15 @@
                     </div>
                 </div>
             </div>
-            <div class="forplus">
-                <i class="fa-solid fa-plus"></i>
+            <div class="forplus " id="pl">
+
+                <i class="fa-solid fa-plus i" id="pl"></i>
             </div>
         </div>
+
+
         <!--  -->
-        <div class="card2">
+        <div class="card2 hide " id="hide">
             <div class="data2">
                 <button> <i class="fa-solid fa-plus"></i> Add New</button>
                 <div class="passdown">
@@ -66,6 +69,7 @@
             </div>
         </div>
     </section>
+    <h3 class="yourfile">your file has been add!</h3>
     <script src="script.js"></script>
 </body>
 
